--- a/30.04.2024/VScode3/locadora/src/main/resources/application.properties
+++ b/30.04.2024/VScode3/locadora/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=locadora
-spring.datasource.url=jdbc:postgresql://localhost:5432/locadora_ta
+spring.datasource.url=jdbc:postgresql://localhost:5432/locadora
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
